- fixed variant list being too high

--- a/src/components/catalogbrowser/catalogBrowser.scss
+++ b/src/components/catalogbrowser/catalogBrowser.scss
@@ -492,7 +492,7 @@
 .catalog-product-variants-list {
     position: absolute;
     width: 200px;
-    max-height: 140px;
+    max-height: 80px;
     overflow: auto;
     display: flex;
     flex-flow: column;
